[metadata]
name = psha_chile
description = Source code to create a Seismic Hazard Model for Chile
long_description = file: README.md
long_description_content_type = text/markdown
author = Pablo Iturrieta
author_email = pciturri@gfz-potsdam.de
license = BSD 3-Clause License
version = 1.0
platforms = unix, linux, osx, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages =
    cat_handler
    source_model
install_requires =
    numpy
    pycsep
    obspy
    pandas
    matplotlib
    geopandas
    rasterio
    scipy
    shapely
    seaborn
    vtk
    rioxarray
python_requires = >=3.9,<3.12
zip_safe = no

[options.packages.find]
include =
    cat_handler*
    source_model*

[options.extras_require]
dev =
    numpy
    pycsep
    black
    flake8
    libcomcat
    obspy
    pandas
    matplotlib
    rasterio
    scipy
    shapely
    seaborn
    vtk
    rioxarray

[flake8]
max-line-length = 96